--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">api.metals.live</domain>
-        <domain includeSubdomains="true">floating-crates-50.loca.lt</domain>
+        <domain includeSubdomains="true">query1.finance.yahoo.com</domain>
+        <domain includeSubdomains="true">finance.yahoo.com</domain>
     </domain-config>
     <base-config cleartextTrafficPermitted="true" />
 </network-security-config>
